--- a/_posts/2019-07-03-Second1.md
+++ b/_posts/2019-07-03-Second1.md
@@ -20,9 +20,9 @@ date: 2019-07-03 22:00:00 -0400
   
   - gitHub Pages를 이용해 webRTC를 이용해 가능하게 하였습니다.
   
-    - ![ezgif.com-video-to-gif (2)](./assets/ezgif.com-video-to-gif (2).gif)
+    - ![test2](./assets/test2.gif)
   
-      ![ezgif.com-video-to-gif (1)](./assets/ezgif.com-video-to-gif (1).gif)
+      ![test1](./assets/test1.gif)
   
 - 목표 회고 : 
 
