--- a/_posts/2020-02-03-Realsixth6.md
+++ b/_posts/2020-02-03-Realsixth6.md
@@ -21,14 +21,14 @@ date: 2020-02-03 19:00:00 -0300
 
 * 목표 회고
 
-  - 추후 교육 내용은 정리해서 github에 커밋 & push 할듯
   - 더욱 노력해서 확실한 실력을 기르는 것이 목표
-  - 개인적으로 마무리를 못함 ㅠㅠ
 
 * 후기 :
 
   - 시원 섭섭한 부분!
   - 오늘 드디어 마무리!!!
+  - 끊임없이 공부하겠습니다! -> 더욱 열심히 해야겠다는 생각이 들었음 ㅠㅠㅠ
+    - 아직 부족하다!
 
 * 이번 모임 종료 :
   - ![KakaoTalk_20200203_193610373](https://user-images.githubusercontent.com/11308147/73651335-91656900-46c7-11ea-88e0-f8247ae79f5b.jpg)
